# bevy_desktop

./: Cargo.toml  Cargo.toml.template
src/: lib.rs  main.rs  main.rs.template
